--- a/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/GradeView.fxml
+++ b/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/GradeView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -14,32 +15,33 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.qlhs.qlhs.Controller.GradeReportController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1400.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.qlhs.qlhs.Controller.AcademicTranscriptController">
     <children>
-        <Label layoutX="486.0" layoutY="14.0" text="Quản Lý Học Sinh" textFill="#da3d3d">
+        <Label layoutX="586.0" layoutY="14.0" maxWidth="294.0" minWidth="228.0" prefHeight="43.0" prefWidth="228.0" text="Quản Lý Học Sinh" textFill="#da3d3d">
             <font>
                 <Font size="29.0" />
             </font>
         </Label>
-        <GridPane layoutX="10.0" layoutY="158.0" prefHeight="123.0" prefWidth="1180.0">
+        <GridPane layoutX="10.0" layoutY="158.0" prefHeight="154.0" prefWidth="1380.0">
             <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="80.0" minWidth="80.0" prefWidth="80.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="80.0" minWidth="80.0" prefWidth="80.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="304.0" minWidth="40.0" prefWidth="0.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="304.0" minWidth="45.0" prefWidth="0.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="80.0" minWidth="80.0" prefWidth="80.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="330.0" minWidth="40.0" prefWidth="0.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="330.0" minWidth="45.0" prefWidth="0.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="80.0" minWidth="80.0" prefWidth="80.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="463.0" minWidth="40.0" prefWidth="0.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="463.0" minWidth="45.0" prefWidth="0.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="80.0" minWidth="80.0" prefWidth="80.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="463.0" minWidth="40.0" prefWidth="42.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="80.0" minWidth="0.0" prefWidth="10.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="187.0" minWidth="0.0" prefWidth="79.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="0.0" prefWidth="23.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="79.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="127.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="463.0" minWidth="45.0" prefWidth="42.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="90.0" minWidth="90.0" prefWidth="90.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="85.0" minWidth="61.0" prefWidth="70.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="58.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="180.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="0.0" prefWidth="0.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="0.0" prefWidth="0.0" />
             </columnConstraints>
             <rowConstraints>
@@ -116,18 +118,21 @@
                 <TextField fx:id="history_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="5" GridPane.rowIndex="2" />
                 <TextField fx:id="geography_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="8" />
                 <TextField fx:id="civicEdu_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="8" GridPane.rowIndex="1" />
-                <TextField fx:id="foreignLang_TF" maxWidth="30.0" minWidth="40.0" onKeyReleased="#handleKeyReleased" prefWidth="30.0" GridPane.columnIndex="11" GridPane.rowIndex="2" />
+                <TextField fx:id="foreignLang_TF" maxWidth="45.0" minWidth="45.0" onKeyReleased="#handleKeyReleased" prefWidth="45.0" GridPane.columnIndex="11" GridPane.rowIndex="2" />
                 <TextField fx:id="technology_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="8" GridPane.rowIndex="2" />
-                <TextField fx:id="it_TF" maxWidth="30.0" minWidth="40.0" onKeyReleased="#handleKeyReleased" prefWidth="30.0" GridPane.columnIndex="11" />
-                <ComboBox fx:id="languageCode_CB" prefWidth="150.0" promptText="Mã NN" GridPane.columnIndex="13" GridPane.rowIndex="2">
+                <TextField fx:id="it_TF" maxWidth="45.0" minWidth="45.0" onKeyReleased="#handleKeyReleased" prefWidth="45.0" GridPane.columnIndex="11" />
+                <ComboBox fx:id="languageCode_CB" maxWidth="75.0" minWidth="75.0" prefHeight="27.0" prefWidth="75.0" promptText="Mã NN" GridPane.columnIndex="12" GridPane.rowIndex="2">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin></ComboBox>
+                <ComboBox fx:id="conduct_CB" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" promptText="HK" GridPane.columnIndex="14">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></ComboBox>
-                <ComboBox fx:id="conduct_CB" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" promptText="HK" GridPane.columnIndex="16">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor></ComboBox>
-                <Label fx:id="conduct_Lb" prefHeight="17.0" prefWidth="79.0" text="Hạnh kiểm" GridPane.columnIndex="15">
+                <Label fx:id="conduct_Lb" prefHeight="17.0" prefWidth="79.0" text="Hạnh kiểm" GridPane.columnIndex="13">
                    <font>
                       <Font size="14.0" />
                    </font>
@@ -136,21 +141,27 @@
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></RadioButton>
-            <Label prefHeight="17.0" prefWidth="79.0" text="Điểm TB" GridPane.columnIndex="15" GridPane.rowIndex="2">
+            <Label prefHeight="17.0" prefWidth="79.0" text="Điểm TB" GridPane.columnIndex="13" GridPane.rowIndex="1">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField fx:id="avgGrade_TF" editable="false" maxWidth="30.0" minWidth="40.0" onKeyReleased="#handleKeyReleased" prefWidth="30.0" GridPane.columnIndex="16" GridPane.rowIndex="2" />
-            <Label text="Ghi chú" GridPane.columnIndex="15" GridPane.rowIndex="1">
+            <Label text="Ghi chú" GridPane.columnIndex="15">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField fx:id="gradeNotes_TF" GridPane.columnIndex="16" GridPane.rowIndex="1" />
+            <TextField fx:id="gradeNotes_TF" prefHeight="27.0" prefWidth="56.0" GridPane.columnIndex="16" />
+            <TextField fx:id="avgGrade_TF" editable="false" maxWidth="30.0" minWidth="45.0" onKeyReleased="#handleKeyReleased" prefWidth="30.0" GridPane.columnIndex="14" GridPane.rowIndex="1" />
+            <Label text="Danh hiệu" GridPane.columnIndex="13" GridPane.rowIndex="2">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField editable="false" maxWidth="45.0" minWidth="45.0" prefWidth="45.0" GridPane.columnIndex="14" GridPane.rowIndex="2" />
             </children>
         </GridPane>
-        <Button layoutX="441.0" layoutY="333.0" mnemonicParsing="false" onAction="#refreshGrades" prefHeight="35.0" prefWidth="90.0" text="Làm Mới">
+        <Button layoutX="541.0" layoutY="362.0" mnemonicParsing="false" onAction="#refreshGrades" prefHeight="35.0" prefWidth="90.0" text="Làm Mới">
             <font>
                 <Font size="15.0" />
             </font>
@@ -158,7 +169,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
         </Button>
-        <Button layoutX="555.0" layoutY="333.0" mnemonicParsing="false" onAction="#updateGrade" prefHeight="35.0" prefWidth="90.0" text="Cập Nhật">
+        <Button layoutX="655.0" layoutY="362.0" mnemonicParsing="false" onAction="#updateGrade" prefHeight="35.0" prefWidth="90.0" text="Cập Nhật">
             <font>
                 <Font size="15.0" />
             </font>
@@ -166,43 +177,44 @@
             <Cursor fx:constant="HAND" />
          </cursor>
         </Button>
-        <Button disable="true" layoutX="669.0" layoutY="333.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="90.0" text="Xóa">
+        <Button disable="true" layoutX="769.0" layoutY="362.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="90.0" text="Xóa">
             <font>
                 <Font size="15.0" />
             </font>
         </Button>
-        <Label layoutX="826.0" layoutY="374.0" text="Tìm Kiếm">
+        <Label layoutX="970.0" layoutY="412.0" text="Tìm Kiếm">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <TextField fx:id="search_TF" layoutX="895.0" layoutY="369.0" onKeyReleased="#search" prefHeight="30.0" prefWidth="295.0" promptText="VD: toán&gt;9, avg&gt;=9, class=A" />
-        <TableView fx:id="gradeReportTableView" layoutX="10.0" layoutY="403.0" maxWidth="1180.0" minWidth="1180.0" prefHeight="385.0" prefWidth="1180.0">
+        <TextField fx:id="search_TF" layoutX="1040.0" layoutY="407.0" onKeyReleased="#search" prefHeight="30.0" prefWidth="350.0" promptText="VD: toán&gt;9, avg&gt;=9, class=A" />
+        <TableView fx:id="gradeReportTableView" layoutX="10.0" layoutY="443.0" maxWidth="1380.0" minWidth="1380.0" prefHeight="345.0" prefWidth="1380.0">
             <columns>
-                <TableColumn fx:id="noColumn" prefWidth="40.0" text="STT" />
-                <TableColumn fx:id="studentIDColumn" text="Mã HS" />
+                <TableColumn fx:id="noColumn" prefWidth="50.0" text="STT" />
+                <TableColumn fx:id="studentIDColumn" prefWidth="100.0" text="Mã HS" />
                 <TableColumn fx:id="firstNameColumn" prefWidth="140.0" text="Họ Đệm" />
-                <TableColumn fx:id="lastNameColumn" minWidth="0.0" prefWidth="60.0" text="Tên" />
-                <TableColumn fx:id="dateOfBirthColumn" prefWidth="75.0" text="Ngày Sinh" />
-                <TableColumn fx:id="genderColumn" prefWidth="54.0" text="Nam" />
-                <TableColumn fx:id="classNameColumn" prefWidth="30.0" text="Lớp" />
+                <TableColumn fx:id="lastNameColumn" prefWidth="70.0" text="Tên" />
+                <TableColumn fx:id="dateOfBirthColumn" prefWidth="90.0" text="Ngày Sinh" />
+                <TableColumn fx:id="genderColumn" prefWidth="60.0" text="Giới tính" />
+                <TableColumn fx:id="classNameColumn" prefWidth="50.0" text="Lớp" />
                 <TableColumn fx:id="literatureColumn" prefWidth="37.0" text="NV" />
-                <TableColumn fx:id="mathColumn" prefWidth="37.0" text="T" />
-                <TableColumn fx:id="physicsColumn" prefWidth="37.0" text="VL" />
-                <TableColumn fx:id="chemistryColumn" prefWidth="37.0" text="HH" />
-                <TableColumn fx:id="biologyColumn" prefWidth="37.0" text="SH" />
-                <TableColumn fx:id="historyColumn" prefWidth="37.0" text="LS" />
-                <TableColumn fx:id="geographyColumn" prefWidth="37.0" text="ĐL" />
+                <TableColumn fx:id="mathColumn" prefWidth="40.0" text="T" />
+                <TableColumn fx:id="physicsColumn" prefWidth="40.0" text="VL" />
+                <TableColumn fx:id="chemistryColumn" prefWidth="40.0" text="HH" />
+                <TableColumn fx:id="biologyColumn" prefWidth="40.0" text="SH" />
+                <TableColumn fx:id="historyColumn" prefWidth="40.0" text="LS" />
+                <TableColumn fx:id="geographyColumn" prefWidth="40.0" text="ĐL" />
                 <TableColumn fx:id="civicEduColumn" prefWidth="46.0" text="GDCD" />
-                <TableColumn fx:id="technologyColumn" prefWidth="37.0" text="CN" />
-                <TableColumn fx:id="itColumn" prefWidth="37.0" text="TH" />
+                <TableColumn fx:id="technologyColumn" prefWidth="40.0" text="CN" />
+                <TableColumn fx:id="itColumn" prefWidth="40.0" text="TH" />
                 <TableColumn fx:id="physicalEduColumn" prefWidth="37.0" text="TD" />
-                <TableColumn fx:id="foreignLangColumn" prefWidth="37.0" text="NN" />
+                <TableColumn fx:id="foreignLangColumn" prefWidth="40.0" text="NN" />
                 <TableColumn fx:id="avgGradeColumn" prefWidth="37.0" text="TB" />
                 <TableColumn fx:id="languageCodeColumn" prefWidth="54.0" text="Mã NN" />
-                <TableColumn fx:id="academicPerformanceColumn" prefWidth="37.0" text="HL" />
-                <TableColumn fx:id="conductColumn" prefWidth="41.0" text="HK" />
-                <TableColumn fx:id="notesColumn" prefWidth="74.0" text="Ghi chú" />
+                <TableColumn fx:id="academicPerformanceColumn" prefWidth="40.0" text="HL" />
+                <TableColumn fx:id="conductColumn" prefWidth="40.0" text="HK" />
+            <TableColumn fx:id="awardColumn" prefWidth="40.0" text="DH" />
+                <TableColumn fx:id="notesColumn" prefWidth="113.0" text="Ghi chú" />
             </columns>
         </TableView>
         <!--         <ChoiceBox fx:id="bangDiem_CB" layoutX="10.0" layoutY="375.0" prefHeight="25.0" prefWidth="138.0" />-->
@@ -280,7 +292,7 @@
             </Label>
             </children>
         </GridPane>
-        <ComboBox fx:id="table_CB" layoutX="10.0" layoutY="369.0" prefHeight="30.0" prefWidth="138.0">
+        <ComboBox fx:id="table_CB" layoutX="10.0" layoutY="407.0" prefHeight="30.0" prefWidth="180.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></ComboBox>
