--- a/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/AcademicTranscriptView.fxml
+++ b/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/AcademicTranscriptView.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1400.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.qlhs.qlhs.Controller.AcademicTranscriptController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1400.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.qlhs.qlhs.Controller.AcademicTranscriptViewController">
     <children>
         <Label layoutX="586.0" layoutY="14.0" maxWidth="294.0" minWidth="228.0" prefHeight="43.0" prefWidth="228.0" text="Quản Lý Học Sinh" textFill="#da3d3d">
             <font>
@@ -189,7 +189,7 @@
             </font>
         </Label>
         <TextField fx:id="search_TF" layoutX="1040.0" layoutY="407.0" onKeyReleased="#search" prefHeight="30.0" prefWidth="350.0" promptText="VD: toán&gt;9, avg&gt;=9, class=A" />
-        <TableView fx:id="gradeReportTableView" layoutX="10.0" layoutY="443.0" maxWidth="1380.0" minWidth="1380.0" prefHeight="345.0" prefWidth="1380.0">
+        <TableView fx:id="AcademicTranscriptTableView" layoutX="10.0" layoutY="443.0" maxWidth="1380.0" minWidth="1380.0" prefHeight="345.0" prefWidth="1380.0">
             <columns>
                 <TableColumn fx:id="noColumn" prefWidth="50.0" text="STT" />
                 <TableColumn fx:id="studentIDColumn" prefWidth="100.0" text="Mã HS" />
